# termux-android-apple-tv-remote

./: .gitignore  datv.py  package.json  pyproject.toml
server/: atvremote.py  datv.py  headers.py  pyproject.toml
server/handlers/: close.py  connect.py  device.py  pair.py  playing.py  remote_control.py  scan.py  send_pin.py
src/lib/: fetch.ts  types.ts
src/routes/: +page.svelte
src/routes/device/[id]/pair/: +page.svelte
src/routes/device/[id]/remote/: +page.svelte
