[tool.poetry]
name = "termux-android-apple-tv-remote"
version = "0.1.0"
description = ""
authors = ["davemackintosh <me@davemackintosh.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyatv = "^0.14.4"
aiohttp-cors = "^0.7.0"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
